JAVA/nacos/nacos-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  labels:
    app: nacos-headless
  namespace: liz-test
spec:
  clusterIP: None
  ports:
    - port: 8848
      name: server
      targetPort: 8848
  selector:
    app: nacos
